--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,62 @@
-# OSX
-#
-.DS_Store
+# Built application files
+template/android/*/build/
+
+# Crashlytics configuations
+template/android/com_crashlytics_export_strings.xml
+
+# Local configuration file (sdk path, etc)
+template/android/local.properties
+
+# Gradle generated files
+template/android/.gradle/
+
+# Signing files
+template/android/.signing/
+
+# User-specific configurations
+template/android/.idea/gradle.xml
+template/android/.idea/libraries/
+template/android/.idea/workspace.xml
+template/android/.idea/tasks.xml
+template/android/.idea/.name
+template/android/.idea/compiler.xml
+template/android/.idea/copyright/profiles_settings.xml
+template/android/.idea/encodings.xml
+template/android/.idea/misc.xml
+template/android/.idea/modules.xml
+template/android/.idea/scopes/scope_settings.xml
+template/android/.idea/vcs.xml
+template/android/*.iml
 
 # Xcode
-#
-build/
 *.pbxuser
-!default.pbxuser
 *.mode1v3
-!default.mode1v3
 *.mode2v3
-!default.mode2v3
 *.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
 *.xcuserstate
-project.xcworkspace
+template/ios/Pods
+template/ios/build
+*project.xcworkspace*
+*xcuserdata*
 
-# Android/IntelliJ
-#
-build/
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Android
+template/android/build
+template/android/.settings
+
 .idea
-.gradle
-local.properties
-*.iml
-
-# node.js
-#
-node_modules/
-package-lock.json # include if you are using npm - don't use both yarn and npm
-npm-debug.log
-yarn-error.log
-yarn.lock # include if you are using yarn - don't use both npm and yarn
-
-# BUCK
-buck-out/
-\.buckd/
-*.keystore
-
-# Fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use Fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
-
-# Bundle artifact
-*.jsbundle
+yarn.lock
+.github
+.vscode
+.nyc_output
+*.coverage.json
+.circleci
+.eslintignore
